--- a/src/fragments/timeline/timeline.scss
+++ b/src/fragments/timeline/timeline.scss
@@ -84,3 +84,14 @@
   width: 22000px;
   top: 47%;
 }
+
+.timeline-line {
+  border-top: 1px solid #777777;
+  width: 100%;
+  top: 6px;
+  position: relative;
+}
+
+.timeline-tag-cloud {
+  margin-left: 50px;
+}
