--- a/src/fragments/coolTimeline/timeline.scss
+++ b/src/fragments/coolTimeline/timeline.scss
@@ -1,4 +1,4 @@
-.timeline-root {
+.cool-timeline-root {
   .timeline-elem {
     position: relative;
     border-radius: 100%;
@@ -24,8 +24,6 @@
   }
 
   .timeline-elem-display-date {
-    position: relative;
-    right: 23px;
     font-size: 12px;
     color: grey;
   }
@@ -80,10 +78,12 @@
     padding: 0 10px;
   }
 
-  position: relative;
-  height: 100%;
-  width: 22000px;
-  top: 47%;
+  .timeline-root {
+    position: relative;
+    height: 100%;
+    width: 22000px;
+    top: 47%;
+  }
 
   .timeline-line {
     border-top: 1px solid #777777;
