redoing the timeline page

--- a/src/fragments/coolTimeline/timeline.scss
+++ b/src/fragments/coolTimeline/timeline.scss
@@ -1,4 +1,7 @@
 .cool-timeline-root {
+  .tagcloud-root {
+    display: inline-block;
+  }
   .timeline-elem {
     position: relative;
     border-radius: 100%;
