--- a/src/components/tab.scss
+++ b/src/components/tab.scss
@@ -1,3 +1,4 @@
+$tabHeight: 27px;
 .tabArea-root {
   position: relative;
   .tab {
@@ -8,12 +9,14 @@
     font-size: 14px;
     color: grey;
     border: 1px solid lightgrey;
-    border-top: none;
     border-radius: 0 0 10px 10px;
     float: right;
     cursor: pointer;
+    background-color: whitesmoke;
     &.selected {
       font-weight: bold;
+      background-color: white;
+      border-top: none;
     }
   }
   .tab-select-line {
@@ -21,7 +24,12 @@
     border-bottom: 3px solid darkcyan;
     padding-top: 2px;
   }
+  .tab-content {
+    height: calc(100% - #{$tabHeight});
+    border-bottom: 1px solid lightgrey;
+  }
   .tabs {
+    height: $tabHeight;
     position: absolute;
     bottom: 0;
     right: 0;
