time to fill in some content

--- a/src/containers/appContentContainer.scss
+++ b/src/containers/appContentContainer.scss
@@ -2,8 +2,10 @@
   margin-top: 40px;
   height: calc(100vh - 40px);
   overflow: scroll;
+  max-width: 100%;
 }
 
 body {
   margin: 0px;
+  max-width: 100%;
 }
