reserve sort timeline

--- a/src/fragments/coolTimeline/timeline.scss
+++ b/src/fragments/coolTimeline/timeline.scss
@@ -52,9 +52,9 @@ $font-fam: Arial;
 
   .timeline-elem-wrapper {
     margin: auto;
-    height: 250px;
+    height: 500px;
     position: relative;
-    padding: 150px 0 25px 0;
+    padding: 0 0 25px 0;
     img {
       height: 100px;
       margin: auto;
@@ -71,19 +71,27 @@ $font-fam: Arial;
     .tabArea-root {
       position: absolute;
       display: inline-block;
-      width: 500px;
-      height: 250px;
+      width: 600px;
+      height: 400px;
       right: 0;
+      .tab-content {
+        position: relative;
+        .description {
+          position: absolute;
+          font-family: $font-fam;
+          font-size: 22px;
+          color: #7d7d7d;
+          font-style: italic;
+          text-align: center;
+          bottom: 0;
+          padding-bottom: 30px;
+        }
+      }
       .tagcloud-root {
         margin: 0 auto;
-        width: 200px;
+        width: 400px;
       }
     }
-  }
-
-  .description {
-    font-family: $font-fam;
-    color: #343434;
   }
 
   .timeline-elem-display-date {
