some more colors

--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -3,7 +3,7 @@
 .header-root {
   position: absolute;
   width: 100%;
-  background-color: $watermelon;
+  background-color: $header;
   height: 40px;
   line-height: 40px;
   top: 0;
