--- a/src/constants.scss
+++ b/src/constants.scss
@@ -3,7 +3,9 @@ $carbon: #a9a9a9;
 $watermelon: #ff3b3f;
 $neutral: #efefef;
 $almostWhite: #fafafa;
+$fresh: #4abdac;
 
+$header: black;
 $backgroundOdd: $almostWhite;
 $backgroundEven: white;
 $mainText: $carbon;
