--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -1,21 +1,39 @@
 @import '../constants.scss';
 
+$headerColor: lighten($carbon, 20%);
+$headerColorHover: lighten($carbon, 80%);
+
 .header-root {
   position: absolute;
   width: 100%;
   background-color: $header;
-  height: 40px;
-  line-height: 40px;
+  height: $headerHeight;
+  line-height: $headerHeight;
   top: 0;
   left: 0;
+  svg {
+    height: 32px;
+    width: 32px;
+    fill: #fff;
+    &:hover {
+      fill: $headerColorHover;
+    }
+  }
 }
 
 .header-elem {
-  color: $neutral;
+  color: $headerColor;
   display: inline-block;
-  font-family: Arial;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Cantarell", "Open Sans", "Helvetica Neue", "Ubuntu", sans-serif;
   margin: auto;
   vertical-align: middle;
-  padding-left: 40px;
+  padding-left: 30px;
+  padding-right: 30px;
   cursor: pointer;
+  font-weight: bold;
+  font-size: 16px;
+  &:hover {
+    color: $headerColorHover;
+    background-color: lighten($header, 10%);
+  }
 }
