fixed footer, more styling

--- a/src/constants.scss
+++ b/src/constants.scss
@@ -6,9 +6,11 @@ $almostWhite: #fafafa;
 $fresh: #4abdac;
 $niceGrey: #edeeef;
 $darkGrey: #222222;
+$font: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Cantarell", "Open Sans", "Helvetica Neue", "Ubuntu", sans-serif;
+
 
 $headerHeight: 50px;
-$footerHeight: 350px;
+$footerHeight: 200px;
 
 $header: $darkGrey;
 $backgroundOdd: $niceGrey;
