--- a/src/components/footer.scss
+++ b/src/components/footer.scss
@@ -2,11 +2,7 @@
 
 .footer-root {
   width: 100%;
-  background: linear-gradient(
-      145deg,
-      transparent calc(100% - 100px),
-      #1f7e9a 100px
-  );
+  background-color: $header;
   height: $footerHeight;
 }
 
