--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -35,6 +35,7 @@ $headerColorHover: lighten($carbon, 80%);
       left: 0;
       right: 0;
       margin: auto;
+      cursor: pointer;
     }
   }
 }
