--- a/src/components/tab.scss
+++ b/src/components/tab.scss
@@ -1,38 +1,89 @@
+@import '../constants.scss';
+
 $tabHeight: 27px;
 .tabArea-root {
-  position: relative;
-  .tab {
-    height: 16px;
-    padding: 5px;
-    display: inline-block;
-    font-family: Arial;
-    font-size: 14px;
-    color: grey;
-    border: 1px solid lightgrey;
-    border-top: none;
-    border-radius: 0 0 10px 10px;
-    float: right;
-    cursor: pointer;
+  &.normal {
+    position: relative;
+    .tab {
+      height: 16px;
+      padding: 5px;
+      display: inline-block;
+      font-family: Arial;
+      font-size: 14px;
+      color: grey;
+      border: 1px solid lightgrey;
+      border-top: none;
+      border-radius: 0 0 10px 10px;
+      float: right;
+      cursor: pointer;
 
-    &.selected {
-      font-weight: bold;
-      background-color: white;
+      &.selected {
+        font-weight: bold;
+        background-color: white;
+      }
+    }
+    .tab-select-line {
+      width: 100%;
+      border-bottom: 3px solid darkcyan;
+      padding-top: 2px;
+    }
+    .tab-content {
+      height: calc(100% - #{$tabHeight});
+      border-bottom: 1px solid lightgrey;
+    }
+    .tabs {
+      height: $tabHeight;
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      width: 100%;
     }
   }
-  .tab-select-line {
-    width: 100%;
-    border-bottom: 3px solid darkcyan;
-    padding-top: 2px;
-  }
-  .tab-content {
-    height: calc(100% - #{$tabHeight});
-    border-bottom: 1px solid lightgrey;
-  }
-  .tabs {
-    height: $tabHeight;
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    width: 100%;
+
+  &.bubble {
+    position: relative;
+    .tab {
+      height: 16px;
+      padding: 5px;
+      display: inline-block;
+      font-size: 14px;
+      color: grey;
+      border: 1px solid lightgrey;
+      border-radius: 10px;
+      cursor: pointer;
+      margin: 0 3px;
+      -webkit-box-shadow: 3px 3px 6px 0px rgba(0,0,0,0.75);
+      -moz-box-shadow: 3px 3px 6px 0px rgba(0,0,0,0.75);
+      box-shadow: 3px 3px 6px 0px rgba(0,0,0,0.75);
+      background-color: $backgroundOdd;
+      &.selected {
+        font-weight: bold;
+        background-color: $backgroundEven;
+        border-color: $watermelon;
+        color: $watermelon;
+      }
+    }
+    .tab-select-line {
+      width: 100%;
+      border-bottom: none;
+      padding-top: 2px;
+    }
+    .tab-content {
+      height: calc(100% - #{$tabHeight});
+    }
+    .tabs {
+      -ms-box-orient: horizontal;
+      display: -webkit-box;
+      display: -moz-box;
+      display: -ms-flexbox;
+      display: -moz-flex;
+      display: -webkit-flex;
+      display: flex;
+      -webkit-justify-content: center;
+      justify-content: center;
+
+      height: $tabHeight;
+      width: 100%;
+    }
   }
 }
