--- a/src/containers/appContentContainer.scss
+++ b/src/containers/appContentContainer.scss
@@ -16,16 +16,19 @@ body {
 }
 
 h1 {
+  margin: 0px;
   font-size: 48px;
   color: $mainText;
 }
 
 h2 {
+  margin: 0px;
   font-size: 24px;
   color: lighten($mainText, 5%);
 }
 
 h3 {
+  margin: 0px;
   font-size: 20px;
   color: lighten($mainText, 10%);
   font-weight: 300;
