--- a/src/containers/appContentContainer.scss
+++ b/src/containers/appContentContainer.scss
@@ -13,23 +13,24 @@ body {
   margin: 0px;
   max-width: 100%;
   font-family: $font;
+  background-color: $darkGrey;
 }
 
 h1 {
   margin: 0px;
-  font-size: 48px;
+  font-size: 5vw;
   color: $mainText;
 }
 
 h2 {
   margin: 0px;
-  font-size: 24px;
+  font-size: 3.3vw;
   color: lighten($mainText, 5%);
 }
 
 h3 {
   margin: 0px;
-  font-size: 20px;
+  font-size: 2.7vw;
   color: lighten($mainText, 10%);
   font-weight: 300;
 }
