--- a/src/fragments/coolTimeline/timeline.scss
+++ b/src/fragments/coolTimeline/timeline.scss
@@ -99,7 +99,15 @@ $timeline-elem-padding: 300px;
       bottom: 0;
       left: 0;
       &.bigImage {
-        height: 350px;
+        @media only screen and (min-device-width : 320px) and (max-device-width : 479px) {
+          height: 200px;
+        }
+        @media only screen and (min-device-width : 480px) and (max-device-width : 767px) {
+          height: 350px;
+        }
+        @media only screen and (min-device-width : 768px) and (max-device-width : 1999px) {
+          height: 350px;
+        }
         right: 0;
         top: 0px;
       }
