--- a/src/containers/appContentContainer.scss
+++ b/src/containers/appContentContainer.scss
@@ -34,3 +34,11 @@ h3 {
   color: lighten($mainText, 10%);
   font-weight: 300;
 }
+
+
+h4 {
+  margin: 0px;
+  font-size: 2.2vw;
+  color: lighten($mainText, 10%);
+  font-weight: 200;
+}
