got a simple animation going

--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -8,7 +8,7 @@ $headerColorHover: lighten($carbon, 80%);
   width: 100%;
   background-color: $header;
   height: $headerHeight;
-  line-height: $headerHeight;
+  line-height: 49px;
   top: 0;
   left: 0;
   z-index: 100;
