--- a/src/fragments/coolTimeline/timeline.scss
+++ b/src/fragments/coolTimeline/timeline.scss
@@ -186,3 +186,30 @@ $timeline-elem-padding: 300px;
     padding: 0 10px;
   }
 }
+
+.example-enter {
+  opacity: 0.01;
+  transition: opacity 5s ease-in;
+}
+
+.example-enter.example-enter-active {
+  opacity: 1;
+}
+
+.example-leave {
+  opacity: 1;
+  transition: opacity 5s ease-in;
+}
+
+.example-leave.example-leave-active {
+  opacity: 0.01;
+}
+
+.example-appear {
+  opacity: 0.01;
+  transition: opacity 5s ease-in;
+}
+
+.example-appear.example-appear-active {
+  opacity: 1;
+}
