--- a/src/components/tagCloud.scss
+++ b/src/components/tagCloud.scss
@@ -6,10 +6,11 @@
 .tagcloud-root {
   >div {
     position: relative;
-    left: 400px;
+    left: 600px;
     &.animate {
       animation-name: example;
-      animation-duration: 4s;
+      animation-duration: .5s;
+      left: 0;
     }
   }
 }
