--- a/src/fragments/coolTimeline/timeline.scss
+++ b/src/fragments/coolTimeline/timeline.scss
@@ -3,7 +3,7 @@
 $timeline-elem-padding: 300px;
 .cool-timeline-root {
   position: relative;
-  .timeline.banner {
+  >img {
     width: 100%;
     height: 100%;
   }
