--- a/src/fragments/blog/blogSelector.scss
+++ b/src/fragments/blog/blogSelector.scss
@@ -1,7 +1,6 @@
 @import '../../constants.scss';
 
 .blog-selector-root {
-  background-color: $backgroundEven;
+  background-color: $backgroundOdd;
   position: relative;
-  .blog-selector.
 }
