profile tile using flexbox

--- a/src/constants.scss
+++ b/src/constants.scss
@@ -16,5 +16,5 @@ $header: $darkGrey;
 $backgroundOdd: $niceGrey;
 $backgroundEven: white;
 $backgroundEducation: lighten($darkGrey, 5%);
-$mainText: $carbon;
+$mainText: darken($carbon, 30%);
 $subText: $carbon;
