--- a/src/components/profileTile.scss
+++ b/src/components/profileTile.scss
@@ -1,15 +1,50 @@
+@import '../constants.scss';
 .profile-tile-root {
-  height: 100px;
-  position: relative;
+  -ms-box-orient: horizontal;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -moz-flex;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-justify-content: flex-start;
+  justify-content: flex-start;
+  height: 75px;
   >div {
     position: relative;
   }
   .profile-tile.img-box {
-    width: 75px;
-    display: inline-block;
+    width: 65px;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -moz-flex;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-justify-content: center;
+    justify-content: center;
+    flex-direction: column;
   }
   .profile-tile.title-box {
-    display: inline-block;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -moz-flex;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-justify-content: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .name {
+    color: $mainText;
+  }
+  .title {
+    font-style: italic;
+    color: $subText
+  }
+  .name, .title {
+    padding: 2px 0;
   }
   .profile-tile.img-box img {
     border-radius: 50%;
