--- a/src/fragments/blog/blogEntry.scss
+++ b/src/fragments/blog/blogEntry.scss
@@ -5,6 +5,13 @@
   border-radius: 20px;
   padding: 15px;
   margin-top: 20px;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -moz-flex;
+  display: -webkit-flex;
+  display: flex;
+  flex-direction: column;
   .blog-entry.title {
     color: $mainText;
   }
@@ -13,5 +20,27 @@
   }
   .blog-entry.summary {
     color: $mainText;
+  }
+
+  .blog-entry.show-more {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -moz-flex;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-justify-content: center;
+    justify-content: center;
+    align-items: center;
+    align-self: flex-end;
+    color: $mainText;
+    &:hover {
+      color: $watermelon;
+      fill: $watermelon;
+    }
+  }
+  svg {
+    width: 22px;
+    height: 22px;
   }
 }
